sfdx-source/force-app/main/default/objects/DD_Grid_Report_Saved_Search__c/DD_Grid_Report_Saved_Search__c.object-meta.xml
<CustomObject>
    <label>DD Grid Report Saved Search</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Grid Report Saved Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>