sfdx-source/force-app/main/default/objects/DD_Grid_Report_Saved_Search__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <description>BIZS-630 - JSON representing DD Grid Report filters, columns and sort order</description>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>