sfdx-source/force-app/main/default/objects/DD_Grid_Report_Saved_Search__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <description>BIZS-630 - Name of the DD Grid Report</description>
    <label>Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>